# 2block-bot-rs

./: Cargo.toml
src/: main.rs
src/abis/: nft.json
